Fix overflow of pre code block.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,3 +36,5 @@ pre {
     margin-bottom : 1em ;
     margin-top : 1em ;
 }
+
+pre{background-color:  rgb(238, 238, 238); padding: 10px; margin: 10px; overflow: auto;}
